[gd_scene load_steps=5 format=3 uid="uid://2d2fjj4yd732"]

[ext_resource type="Script" path="res://Scenes and Scripts/Game/Map/NPCs/Bandmembers/sven_npc.gd" id="1_btnqc"]
[ext_resource type="Texture2D" uid="uid://d1k81impxg2hi" path="res://Assets/Art/Characters/Band Members/Saxophonist Sven/sven_dialog_icon.png" id="2_xl1le"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cw4h6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_xl1le")
}, {
"duration": 1.0,
"texture": ExtResource("2_xl1le")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8iybo"]
radius = 45.0444

[node name="SvenNPC" type="Node2D"]
script = ExtResource("1_btnqc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_cw4h6")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_8iybo")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
